--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="google-site-verification" content="J5aalbkTz 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="google-site-verification" content="J5aalbkTzWySuGvUttp0I43WmzTpPYG9TuSX9B-AM68" />
 <!-- SEO -->
 <meta name="description" content="Madhavaa Shadow Marble Experts - Italian Marble, Granite, Tiles Fitting Professional Service. Contact 7081721056">
 <meta name="keywords" content="Marble fitting, Granite installation, Tiles work, Italian marble, Marble contractor">
